// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package host;
option go_package="chromium.googlesource.com/enterprise/cel/go/host";

import "schema/asset/network.proto";
import "schema/gcp/compute/compute-api.proto";

// GCP project hosting.
message Project {
  // The GCP project name.
  string name = 1;

  // The default zone to use when constructing resources. The |zone| also
  // implicitly defines the region.
  string zone = 2;
}

// Dependencies are things that aren't referred to directly by an asset
// manifest, but can be referred to by other host environment settings.

// Describes a GCE source disk image. See
// https://cloud.google.com/compute/docs/images#image_families
message Image {
  // Name of the image. Used within the host environment schema to refer to
  // this image.
  string name = 1;

  // The GCP project providing the image.
  string project = 2;

  // The GCP Image family name. Combined with the |project| field, the |family|
  // is used to locate the GCP image family. If the |url| is not specified,
  // then the resolver will pick the latest available image from this family
  // and populate the URL with it.
  string family = 3;

  // The full or partial URL to the disk image. If this is specified, then the
  // |project| and |family| values are ignored.
  string url = 4;
}

// Describes a type of machine (virtual or otherwise).
message MachineType {
  // Name is used to match machine type name from asset description.
  string name = 1;

  // One of the following will be used to resolve this machine type.
  oneof base {
    // InstanceProperties are used for constructing a new GCE instance.
    //
    // The AttachedDisk.Source property can refer to an image name using the
    // syntax "${image.<imagename>.url}" where <imagename> is a named disk image in the 
    compute.InstanceProperties instance_properties = 5;

    // An instance template to use for constructing a new GCE instance. Should
    // be a full or a partial URL.
    string instance_template = 6;
  }
}

// Describes an external address pool.
message AddressPool {
  // Name of address pool. Used for matching incoming references from an asset
  // description.
  string name = 1;

  // Static literal addresses.
  repeated asset.Address fixed_address = 2;

  // GCE reserved addresses by exact address name. Should refer to external addresses.
  repeated string reserved_address = 3;

  // GCE reserved addresses by regex. The provided regular expression must
  // match the entire name. The reserved address must be an external address. 
  //
  // E.g.:
  //     reserved_address_regex: "foo.*"
  // ... matches "foobar", but not "egfoox"
  repeated string reserved_address_regex = 4;
}

message HostEnvironment {
  Project project = 1;

  repeated MachineType machine_type = 10;
  repeated AddressPool address_pool = 11;
  repeated Image image = 12;
}
